# ITMO_nir_4

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
api_service/: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
api_service/api/: endpoints.py  internal.py  models.py
api_service/db/: database.py  models.py  operations.py
api_service/services/: pypi.py  runner_client.py
frontend/: .gitignore  .prettierrc.json  Dockerfile  components.d.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.mjs  vite.config.mts  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/components/: AnalysisForm.vue  AnalysisResults.vue  AnalysisStatusDialog.vue
frontend/src/components/charts/: MetricBarCharts.vue  MetricBoxPlots.vue  (+1 more)
frontend/src/constants/: chartConstants.ts
frontend/src/pages/: index.vue
frontend/src/plugins/: apexcharts.ts  index.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: csvService.ts
frontend/src/store/: analyzerStore.ts
frontend/src/styles/: mobile.scss  settings.scss
frontend/src/types/: index.ts  metrics.ts
frontend/src/utils/: metricsCalculator.ts  validators.ts
runner_service/: .env.example  .gitignore  Dockerfile  config.py  main.py  metrics_collector.go  pyproject.toml  requirements.txt
runner_service/api/: endpoints.py  models.py
runner_service/services/: analyzer.py  api_client.py  github.py  package.py
